--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
       <version>2.9.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.7.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
