--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
   </properties>
 
   <dependencies>
+      <dependency>
+        <groupId>io.javalin</groupId>
+        <artifactId>javalin</artifactId>
+        <version>5.6.1</version> <!-- Reemplaza esta versión con la última disponible -->
+      </dependency>
+
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
