--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,21 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
+    <!--<dependency>
       <groupId>antlr</groupId>
       <artifactId>antlr</artifactId>
       <version>2.7.2</version>
+
+    </dependency>-->
+
+    <!-- Dependencia de ANTLR CHATGPT -->
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>antlr4</artifactId>
+      <version>4.9.2</version>
     </dependency>
+
+
 
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
